<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileMiner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="accessibility_service_description">Enable this service to allow MobileMiner to record when net-enabled apps send notifications.</string>
    <string name="title_activity_map">MinerMap</string>
    <string name="title_activity_settings">Settings</string>
    <string name="start_mining_button">Start Mining</string>
    <string name="stop_mining_button">Stop Mining</string>
    <string name="my_data_button">My Data</string>
    <string name="network_button_default">Network: None</string>
    <string name="network_sockets_text">Network Sockets:</string>
    <string name="open_text">Open</string>
    <string name="closed_text">Closed</string>
    <string name="no_cell_text">No Cell</string>
    <string name="my_data_actionbar_title">My Data</string>
    <string name="my_data_export_data">Export Data</string>
    <string name="my_data_expire_data">Expire Data</string>
    <string name="my_data_database_size">Database Size:</string>
    <string name="my_data_cell_locations">Cell Locations</string>
    <string name="my_data_top_apps">Top Apps</string>

    <string name="element_title_activity_settings_mine_on_boot">Start Mining on Boot</string>

</resources>