<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/exportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="exportData"
            android:text="@string/my_data_export_data"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/expireButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="expireData"
            android:text="@string/my_data_expire_data"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <TextView
        android:id="@+id/dataText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_data_database_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        
    <Button
        android:id="@+id/myLocationsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="myLocations"
        android:text="@string/my_data_cell_locations" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_data_top_apps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/usedApps"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
        
</LinearLayout>
